fix(Live): user name overflow issue

--- a/components/views/navigation/sidebar/live/Live.less
+++ b/components/views/navigation/sidebar/live/Live.less
@@ -21,6 +21,12 @@
     font-family: @primary-font;
     &:extend(.font-secondary);
   }
+  .sel-user-name.is-exist {
+    width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
   .button {
     padding: 0 @light-spacing 0 @light-spacing;
     height: unset;
